# act_training

./: .gitignore  README.md  pyproject.toml  train_real.py
scripts/: train_real.sh
src/act_training/: act_policy.py  data_utils.py
src/act_training/detr/: main.py
src/act_training/detr/models/: detr_vae.py
