[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "act-training"
version = "0.1.0"
description = "Standalone ACT training for real-robot offline datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "h5py",
  "matplotlib",
  "tqdm",
  "einops",
  "packaging",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
